tests/errors/syn_cases6.java
public class syn_cases6 {
public static void main(String[] args){
switch(args.length){
: return 32;
}
}
}